tests/syntax-errors/large_message_error.arl
archetype large_message_error

entry exec (op : operation) {
  transfer op at
}
